--- a/NaLu_lab04.ipynb
+++ b/NaLu_lab04.ipynb
@@ -416,8 +416,8 @@
     "\n",
     "# plot the data\n",
     "# This graph shows the hierarchical clustering of all the data points\n",
-    "# When the height is larger than 200, the data points can be cluster to two group\n",
-    "# when the height is larger than 100, all data points can be cluster to four group\n",
+    "# When the height is larger than 200, the data points can be clustered to two groups\n",
+    "# when the height is larger than 100 but less than 200, all data points can be clustered to four groups\n",
     "# As the heigh is lower, more cluster will be formed.\n",
     "plt.figure()\n",
     "dendrogram(Z)\n",
@@ -821,8 +821,8 @@
     "\n",
     "# plot the data\n",
     "# This graph shows the hierarchical clustering of all the data points\n",
-    "# When the height is larger than 300, the data points can be cluster to two group\n",
-    "# when the height is larger than 200, all data points can be cluster to four group\n",
+    "# When the height is larger than 300, the data points can be clustered to two groups\n",
+    "# when the height is larger than 200 but less than 300, all data points can be clustered to four groups\n",
     "# As the heigh is lower, more cluster will be formed.\n",
     "plt.figure(figsize=(10, 10))\n",
     "dendrogram(Z)\n",
